--- a/sitio/index.html
+++ b/sitio/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Documento sin título</title>
+<title>The bunny in the void!</title>
 <style type="text/css">
 #contenedor {
 	position: absolute;
@@ -11,164 +11,287 @@
 	z-index: 1;
 	background-color: #FF0000;
 }
+
 #encabezado {
 	position: absolute;
 	width: 1200px;
-	height: 150px;
-	z-index: 2;
+	height: 80px;
+	z-index: 1;
 	background-color: #000000;
-	text-align: center;
-	color: #CC0;
-	font-style: italic;
-	font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+	background-image: url(imgs/banner.png);
 }
-#menu {
-	padding-top: 20px;
+#divLogo {
 	position: absolute;
-	width: 1200px;
-	height: 40px;
-	z-index: 2;
-	background-color: #FFFFAA;
-	left: 0px;
-	top: 150px;
-	text-align: center;
-	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-	color: #000;
-	font-weight: bold;
-}
-#pie {
-	position: absolute;
-	width: 1200px;
-	height: 65px;
-	z-index: 2;
-	background-color: #FFCC00;
-	left: 0px;
-	top: 937px;
-}
-#logo {
-	position: absolute;
-	width: 115px;
-	height: 150px;
-	z-index: 2;
-	left: 1050px;
+	width: 79px;
+	height: 80px;
+	z-index: 1;
+	left: 1121px;
 	top: 0px;
-	background-color: #00FFFF;
 }
-#contenedor #encabezado h1 {
-	text-align: center;
+#titulo {
+	position: absolute;
+	width: 350px;
+	height: 54px;
+	z-index: 2;
+	left: 423px;
+	top: 1px;
+}
+#contenedor #encabezado #apDiv1 h1 {
 	color: #FFF;
 	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-	font-weight: bold;
+}
+#slogan {
+	position: absolute;
+	width: 129px;
+	height: 42px;
+	z-index: 3;
+	left: 641px;
+	top: 54px;
+	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+	font-style: italic;
+	color: #D4BF00;
+	text-align: center;
 }
 #contenido {
 	position: absolute;
 	width: 1200px;
-	height: 654px;
+	height: 850px;
+	z-index: 2;
+	left: 0px;
+	top: 80px;
+	background-color: #AA9F55;
+}
+#contenedor #encabezado #titulo #titulotexto strong {
+	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+	color: #FFF;
+}
+#Pie {
+	position: absolute;
+	width: 1200px;
+	height: 70px;
 	z-index: 3;
 	left: 0px;
-	top: 285px;
-	background-color: #E3E8C8;
+	top: 930px;
+	background-color: #000;
 }
-#mosaico1 {
+</style>
+<link href="SpryAssets/SpryMenuBarHorizontal.css" rel="stylesheet" type="text/css" />
+<style type="text/css">
+#logos {
 	position: absolute;
-	width: 400px;
-	height: 115px;
+	width: 300px;
+	height: 70px;
 	z-index: 1;
-	background-color: #9FD9FF;
+}
+#face {
+	position: absolute;
+	width: 100px;
+	height: 70px;
+	z-index: 1;
+	background-color: #A7B7F5;
 	text-align: center;
 }
-#mosaico2 {
+#instagram {
 	position: absolute;
-	width: 400px;
-	height: 115px;
+	width: 100px;
+	height: 70px;
 	z-index: 2;
-	left: 400px;
-	background-color: #FFCCFF;
-	text-align: center;
-}
-#mosaico3 {
-	position: absolute;
-	width: 400px;
-	height: 115px;
-	z-index: 3;
-	left: 800px;
+	left: 100px;
 	top: 0px;
-	background-color: #FFFFCC;
+	background-color: #F89387;
 	text-align: center;
-	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
 }
-#contenedor #contenido #mosaico2 h2 {
-	text-align: center;
-	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-}
-#contenedor #contenido #mosaico1 p {
-	text-align: center;
-	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-}
-#contenedor #contenido #mosaico2 p strong {
-	font-weight: bold;
-	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-}
-#contenedor #contenido #mosaico2 p {
-	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-}
-#contenedor #contenido #mosaico1 h2 {
-	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-}
-#apDiv1 {
+#twitter {
 	position: absolute;
-	width: 400px;
-	height: 538px;
+	width: 100px;
+	height: 70px;
+	z-index: 3;
+	left: 200px;
+	background-color: #99DDF7;
+	text-align: center;
+}
+#contenido_web {
+	position: absolute;
+	width: 200px;
+	height: 115px;
 	z-index: 4;
-	left: 800px;
-	top: 115px;
-	background-color: #FF0000;
+	left: 0px;
+	top: 119px;
+}
+#contenido_int {
+	position: absolute;
+	width: 1200px;
+	height: 815px;
+	z-index: 4;
+	left: 0px;
+	top: 35px;
+	background-color: #CCA38E;
+}
+#panel_sup_izq {
+	position: absolute;
+	width: 600px;
+	height: 410px;
+	z-index: 1;
+	left: 0px;
+	top: 0px;
+	background-color: #E3CDC2;
+}
+#panel_sup_der {
+	position: absolute;
+	width: 600px;
+	height: 410px;
+	z-index: 2;
+	left: 600px;
+	top: 0px;
+	background-color: #E3CDC2;
 }
 #apDiv2 {
 	position: absolute;
 	width: 400px;
-	height: 538px;
-	z-index: 4;
-	left: 400px;
-	top: 115px;
+	height: 400px;
+	z-index: 3;
+	left: 100px;
+	top: 60px;
 }
-#apDiv3 {
+#div_gato_negro {
+	position: absolute;
+	width: 250px;
+	height: 350px;
+	z-index: 1;
+	left: 30px;
+	top: 25px;
+}
+#div_gato_blanco {
+	position: absolute;
+	width: 250px;
+	height: 350px;
+	z-index: 2;
+	left: 310px;
+	top: 25px;
+}
+#apDiv5 {
+	position: absolute;
+	width: 500px;
+	height: 300px;
+	z-index: 1;
+	left: 30px;
+	top: 30px;
+}
+#logo_anzu {
+	position: absolute;
+	width: 200px;
+	height: 200px;
+	z-index: 2;
+	left: 200px;
+	top: 180px;
+}
+#txt_der {
 	position: absolute;
 	width: 400px;
-	height: 538px;
-	z-index: 4;
+	height: 200px;
+	z-index: 3;
+	left: 100px;
+	top: 10px;
+	text-align: center;
+	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+}
+#panel_inferior {
+	position: absolute;
+	width: 1200px;
+	height: 407px;
+	z-index: 3;
 	left: 0px;
-	top: 115px;
+	top: 408px;
+}
+#mesa_img {
+	position: absolute;
+	width: 450px;
+	height: 350px;
+	z-index: 1;
+	left: 100px;
+	top: 40px;
+}
+#mesa_txt {
+	position: absolute;
+	width: 326px;
+	height: 53px;
+	z-index: 2;
+	left: 150px;
+	top: 15px;
+	font-family: Verdana, Geneva, sans-serif;
+	text-align: center;
+}
+#apDiv6 {
+	position: absolute;
+	width: 462px;
+	height: 346px;
+	z-index: 3;
+	left: 669px;
+	top: 40px;
+}
+#txt_puesto {
+	position: absolute;
+	width: 500px;
+	height: 45px;
+	z-index: 4;
+	left: 650px;
+	top: 15px;
+	font-family: Verdana, Geneva, sans-serif;
+	text-align: center;
 }
 </style>
+<script src="SpryAssets/SpryMenuBar.js" type="text/javascript"></script>
 </head>
 
 <body>
 <div id="contenedor">
   <div id="encabezado">
-  	<div id="logo"><img src="imgs/logo.jpg" width="150" height="150" /></div>
-  	<h1>The bunny in the void</h1>
-  	<p>Haz que te noten </p>
+    <div id="divLogo"><img src="imgs/logo.jpg" name="logo" width="79" height="80" id="logo" /></div>
+    <div id="titulo">
+      <h1 id="titulotexto"><strong>The bunny in the void</strong></h1>
+    </div>
+    <div id="slogan">Hazte notar</div>
   </div>
-  <div id="menu">Menú | <a href="#" target="_self">Inicio</a> | <a href="acerca_de.html">Acerca de nosotros</a> | <a href="llaveros.html">Llaveros</a> | <a href="shakers.html">Shakers</a> | <a href="colgantes.html">Colgantes</a></div>
-  <div id="pie"></div>
   <div id="contenido">
-    <div id="mosaico1">
-      <h2>Llaveros</h2>
-      <p>De diferentes tamaños y estilos para todos los gustos.</p>
+    <ul id="MenuBar1" class="MenuBarHorizontal">
+      <li><a href="new_index.html">Inicio</a>      </li>
+<li><a href="llaveros.html">Llaveros</a></li>
+      <li><a href="shakers.html">Shakers</a></li>
+      <li><a href="collares.html">Collares</a></li>
+      <li><a href="acerca_de.html">Acerca de nosotros</a></li>
+    </ul>
+  <div id="contenido_int">
+    <div id="panel_sup_izq">
+      <div id="div_gato_negro"><img src="imgs/cat_black.jpg" name="gato_negro" width="259" height="350" id="gato_negro" /></div>
+      <div id="div_gato_blanco"><img src="imgs/cat_white.jpg" name="gato_blanco" width="259" height="350" id="gato_blanco" /></div>
     </div>
-    <div id="mosaico2">
-      <h2>Shakers</h2>
-      <p>Rellenos de aceite y <strong><em>más</em></strong> accesorios!</p>
+    <div id="panel_sup_der">
+      <div id="logo_anzu"><img src="imgs/anzu.jpg" width="200" height="205" /></div>
+      <div id="txt_der">
+        <p>Hola, soy Anzu (algunos me llaman Misvoid) y gasto mi dinero en comprar cositas para hacer cositas que espero te gusten tanto como para gastar tu dinero en ellas y recuperar el mío.</p>
+        <p>Los hago en casa con mis manitas y con todo mi corazón! (Y con resina).</p>
+      </div>
     </div>
-    <div id="mosaico3">
-      <h2>Colgantes</h2>
-      <p>Son collares, collares bonitos</p>
+    <div id="panel_inferior">
+      <div id="mesa_img"><img src="imgs/mesa_1.jpg" name="mesa" width="450" height="346" id="mesa" /></div>
+      <div id="mesa_txt">Tengo una mesa-taller o algo así.</div>
+      <div id="apDiv6"><img src="imgs/puesto.jpg" name="puesto" width="461" height="350" id="puesto" /></div>
+      <div id="txt_puesto">Y hasta me pongo en eventos y toda la cosa (a veces).</div>
     </div>
-    <div id="apDiv1"><img src="imgs/llaveros_muchos.jpeg" width="400" height="538" /></div>
-    <div id="apDiv2"><img src="imgs/shaker_ditto.jpg" width="400" height="538" /></div>
-    <div id="apDiv3"><img src="imgs/heart_text.jpg" width="400" height="538" /></div>
+  </div>    
+  </div>
+
+  <div id="Pie">
+    <div id="logos">
+      <div id="face"><a href="https://www.facebook.com/misvoid" target="_blank"><img src="imgs/logo-face.png" name="logo_face" width="72" height="70" id="logo_face" /></a></div>
+      <div id="instagram"><a href="https://instagram.com/the.bunny.in.the.void" target="_blank"><img src="imgs/logo-insta.png" name="logo_insta" width="72" height="70" id="logo_insta" /></a></div>
+      <div id="twitter"><a href="https://twitter.com/misvoid" target="_blank"><img src="imgs/logo-twitter.png" width="72" height="70" /></a></div>
+    </div>
+    <p id="dr">2019 Todos los derechos reservados</p>
   </div>
 </div>
+<script type="text/javascript">
+var MenuBar1 = new Spry.Widget.MenuBar("MenuBar1", {imgDown:"SpryAssets/SpryMenuBarDownHover.gif", imgRight:"SpryAssets/SpryMenuBarRightHover.gif"});
+</script>
 </body>
 </html>
