Uptade index links on navbar

--- a/sitio/collares.html
+++ b/sitio/collares.html
@@ -256,7 +256,7 @@ function MM_preloadImages() { //v3.0
   </div>
   <div id="contenido">
     <ul id="MenuBar1" class="MenuBarHorizontal">
-      <li><a href="new_index.html">Inicio</a>      </li>
+      <li><a href="index.html">Inicio</a>      </li>
 <li><a href="llaveros.html">Llaveros</a></li>
       <li><a href="shakers.html">Shakers</a></li>
       <li><a href="collares.html">Collares</a></li>
